# d2d_automations

./: .dockerignore  .gitignore  README.md  run_quality_checks.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml  rust.yml
accounting/: Cargo.toml  FEATURE_REQUESTS.md  README.md  run_quality_checks.sh  test.csv  test_orders.csv
accounting/.cargo/: audit.toml
accounting/src/: README.md  app.rs  app_tests.rs  csv_processor.rs  csv_processor_tests.rs  csv_reader.rs  invoice_generator.rs  lib.rs  main.rs  models.rs  models_tests.rs  sevdesk_api.rs  sevdesk_api_tests.rs
accounting/src/app/: logic.rs  mod.rs  ui.rs
accounting/src/csv_processor/: README.md  card_parser.rs  card_parser_tests.rs  field_parsers.rs  field_parsers_tests.rs  mod.rs  mod_tests.rs  order_parser.rs  order_parser_tests.rs  validator.rs  validator_tests.rs
accounting/src/sevdesk_api/: README.md  check_accounts.rs  client.rs  contacts.rs  contacts_tests.rs  countries.rs  countries_tests.rs  invoice_workflow.rs  invoices.rs  invoices_tests.rs  mod.rs  simulation.rs  users.rs  utils.rs
accounting/src/sevdesk_api/tests/: construction_tests.rs  invoice_workflow_tests.rs  mod.rs  models_tests.rs  utils_tests.rs
accounting/tests/: csv_processor_tests.rs
accounting/tests/fixtures/: empty_data.csv  international_orders.csv  invalid_columns.csv  multi_item_order.csv  professional_customer.csv  valid_multiple_orders.csv  valid_single_order.csv  validation_errors.csv
accounting/ui/: main.slint
check_stock/: AndroidManifest.xml  Cargo.toml  FEATURE_REQUESTS.md  PERFORMANCE_TESTING.md  README.md  run_clippy.sh  run_quality_checks.sh
check_stock/.cargo/: audit.toml  config.toml
check_stock/src/: aging.rs  aging_tests.rs  bin_consolidation.rs  bin_consolidation_tests.rs  buy_helper.rs  buy_helper_tests.rs  card_matching.rs  card_matching_tests.rs  config.rs  consistency.rs  consistency_tests.rs  deck_fetch.rs  deck_fetch_tests.rs  error.rs  errors.rs  formatters.rs  formatters_tests.rs  gui.rs  inventory_db.rs  inventory_db_tests.rs  io.rs  lib.rs  main.rs  mispricing.rs  mispricing_tests.rs  models.rs  models_tests.rs  price_trends.rs  price_trends_tests.rs  restock.rs  restock_tests.rs  scryfall.rs  stock_analysis.rs  stock_analysis_tests.rs  ui.rs  utils.rs  wantslist.rs  wantslist_tests.rs
check_stock/src/api/: cardmarket.rs  cardmarket_tests.rs  inventory_sync.rs  mod.rs  scryfall.rs  scryfall_tests.rs
check_stock/src/cache/: card_cache.rs  card_cache_tests.rs  image_cache.rs  image_cache_tests.rs  mod.rs
check_stock/src/ui/: app.rs  language.rs  mod.rs  state.rs  style.rs
check_stock/src/ui/components/: file_picker.rs  inventory_sync_bar.rs  mod.rs  output_window.rs
check_stock/src/ui/screens/: bin_analysis.rs  buy_helper.rs  consolidation.rs  consolidation_tests.rs  mispricing.rs  mod.rs  movers.rs  picking.rs  picking_tests.rs  pricing.rs  pricing_tests.rs  restock.rs  search.rs  stock_analysis.rs  stock_checker.rs  stock_checker_tests.rs  stock_listing.rs  welcome.rs
check_stock/src/ui/screens/pricing/: constants.rs  draw.rs  eval.rs  geometry.rs  interaction.rs  mod.rs  params.rs  preview.rs  tests.rs  toolbar.rs
check_stock/tests/: io_tests.rs  performance_tests.rs  utils_tests.rs
inventory_sync/: .dockerignore  Cargo.toml  Dockerfile  FEATURE_REQUESTS.md  README.md  backup.env.example  backup_to_r2.sh  docker-compose.yml  run_quality_checks.sh
inventory_sync/src/: database.rs  database_tests.rs  error.rs  image_cache.rs  image_cache_tests.rs  indicators.rs  indicators_tests.rs  lib.rs  main.rs  scanner.rs  scanner_tests.rs  scryfall.rs  scryfall_tests.rs  web.rs  web_tests.rs
inventory_sync/src/cardmarket/: mod.rs  price_guide.rs  price_guide_tests.rs  product_catalog.rs  product_catalog_tests.rs
inventory_sync/static/: index.html
mtg_common/: Cargo.toml  README.md  run_quality_checks.sh
mtg_common/src/: cardmarket.rs  cardmarket_tests.rs  error.rs  file_cache.rs  file_cache_tests.rs  inventory_sync.rs  inventory_sync_tests.rs  lib.rs  scryfall.rs  scryfall_tests.rs
