[package]
name = "accounting"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.7"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"

[build-dependencies]
slint-build = "1.8"

[[bin]]
name = "accounting"
path = "src/main.rs"
