[package]
name = "sevdesk_invoicing"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rfd = "0.16"
uuid = { version = "1.18", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"
wiremock = "0.6"
tokio-test = "0.4"
