[package]
name = "d2d_automations"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "MTG Stock Checker and Analysis Tool"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rfd = { version = "0.15.3", features = ["xdg-portal"] }
regex = "1.10.3"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
winit = { version = "0.30.9", features = ["x11", "wayland"] }

[dev-dependencies]
tempfile = "3.12.0"
