[package]
name = "mtg_common"
version = "0.1.0"
edition = "2021"
description = "Shared types for MTG business operations (Cardmarket, Scryfall, errors)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false }
thiserror = "2"
log = "0.4"
