[package]
name = "mtg_common"
version = "0.1.0"
edition = "2021"
description = "Shared types and API clients for MTG business operations (Cardmarket, Scryfall, errors)"

[features]
# Enables the blocking (non-async) HTTP client variants for GUI apps.
blocking = ["reqwest/blocking"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
log = "0.4"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
